# MotiveChess

./: .gitignore  README.md  philidor.txt  puzzle-1-mate-in-5.fen.txt  speedtests.txt
MotiveChess/: BitBoard.cpp  BitBoard.h  Board.cpp  Board.h  CMakeLists.txt  CMakePresets.json  CopyProtection.h  Engine.cpp  Engine.h  Fen.cpp  Fen.h  GoArguments.cpp  GoArguments.h  MotiveChess.cpp  MotiveChess.h  Move.cpp  Move.h  Perft.cpp  Perft.h  Registration.h  Test.cpp  Test.h  Tests.cpp  Tests.h  Version.h.in
test/: daily-puzzle.fen.txt  debug.cmd  deleteme-analysis.txt  mate-in-6.fen  mate-in-7.fen  notes.txt  perft.txt  philidor.txt  puzzles.fen  release.cmd  tests.txt  wac-depth-4-2.txt  wac-depth-4-4.txt  wac-depth-4.txt  wac-depth-6.txt  x
